--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token":"token_Here",
-    "prefix":"!",
-    "BotStatus":"Upgrading Accounts."
+    "token":"TOKEN",
+    "prefix":"PREFIX",
+    "BotStatus":"STATUS"
 }
